--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,13 @@
 </head>
 <body>
     <h1>게시판</h1>
-    <a href="{{ url_for('new_post') }}">새 글쓰기</a>
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('new_post') }}">새 글쓰기</a>
+        <a href="{{ url_for('logout') }}">로그아웃</a>
+    {% else %}
+        <a href="{{ url_for('login') }}">로그인</a>
+        <a href="{{ url_for('signup') }}">회원가입</a>
+    {% endif %}
     <ul>
         {% for post in posts %}
             <li><a href="{{ url_for('get_post', id=post.id) }}">{{ post.title }}</a></li>
