--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,11 @@
     <ul>
         {% for post in posts %}
             <li><a href="{{ url_for('get_post', id=post.id) }}">{{ post.title }}</a></li>
+            {% if current_user.is_authenticated and current_user == post.user %}
+                <form action="{{ url_for('delete_post', id=post.id) }}" method="post">
+                    <button type="submit">삭제</button>
+                </form>
+            {% endif %}
         {% endfor %}
     </ul>
 </body>
